--- a/package.json
+++ b/package.json
@@ -1,13 +1,21 @@
 {
   "name": "fexios",
-  "version": "1.0.0",
-  "description": "",
+  "version": "0.1.0",
+  "description": "对fetch的封装, 使其能够表现的像axios",
   "type": "module",
   "scripts": {
+    "build": "tsup src --format esm,cjs --dts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
+  "keywords": [
+    "fetch",
+    "axios"
+  ],
   "author": "",
   "license": "MIT",
-  "packageManager": "pnpm@10.5.2"
+  "packageManager": "pnpm@10.5.2",
+  "devDependencies": {
+    "tsup": "^8.4.0",
+    "typescript": "^5.8.2"
+  }
 }
